Regression: Blender crash when using a particle system + grease pencil line art modifier #96781

Closed
opened 2022-03-25 15:05:02 +01:00 by Victor Imo · 29 comments

System Information
Operating system: Windows 10
Graphics card: NVIDIA GeForce GTX 1070

Blender Version
Broken: 3.1 and 3.0
Worked: 2.93

Caused by 1b07b7a068

Short description of error
Blender crashes when using particle system + grease pencil line art modifier

Exact steps for others to reproduce the error

  • creating a blank grease pencil object
  • applying a Line art modifier on it
  • source is a simple 3d model of a spaceship modeled in blender
  • creating a plane as a source of particle and simple retangle as the object being emited
  • when trying to play the particle system or bake it, it crashes every single time
  • if the grease pencil is hiden or deactivate, the particle system is functionning
  • same error occured on a different computer

GREASE PENCIL BUG BLENDER.blend

**System Information** Operating system: Windows 10 Graphics card: NVIDIA GeForce GTX 1070 **Blender Version** Broken: 3.1 and 3.0 Worked: 2.93 Caused by 1b07b7a068 **Short description of error** Blender crashes when using particle system + grease pencil line art modifier **Exact steps for others to reproduce the error** - creating a blank grease pencil object - applying a Line art modifier on it - source is a simple 3d model of a spaceship modeled in blender - creating a plane as a source of particle and simple retangle as the object being emited - when trying to play the particle system or bake it, it crashes every single time - if the grease pencil is hiden or deactivate, the particle system is functionning - same error occured on a different computer [GREASE PENCIL BUG BLENDER.blend](https://archive.blender.org/developer/F12945339/GREASE_PENCIL_BUG_BLENDER.blend)
Author

Added subscriber: @Victorjoue

Added subscriber: @Victorjoue
Member

Added subscriber: @OmarEmaraDev

Added subscriber: @OmarEmaraDev
Member

Changed status from 'Needs Triage' to: 'Needs User Info'

Changed status from 'Needs Triage' to: 'Needs User Info'
Member

I can't replicate the crash. Can you attach a minimal file that reproduces the issue?
Can you also attach the crash log created by Blender? https://docs.blender.org/manual/en/latest/troubleshooting/crash.html

I can't replicate the crash. Can you attach a minimal file that reproduces the issue? Can you also attach the crash log created by Blender? https://docs.blender.org/manual/en/latest/troubleshooting/crash.html
Author

Thank you for your answer
Here I recreate the issue with a simple scene that you'll find attached to this message, also there is no crash log created by blender, it just vanished without any error message :

GREASE PENCIL BUG BLENDER.blend1

GREASE PENCIL BUG BLENDER.blend

Thank you for your answer Here I recreate the issue with a simple scene that you'll find attached to this message, also there is no crash log created by blender, it just vanished without any error message : [GREASE PENCIL BUG BLENDER.blend1](https://archive.blender.org/developer/F12945338/GREASE_PENCIL_BUG_BLENDER.blend1) [GREASE PENCIL BUG BLENDER.blend](https://archive.blender.org/developer/F12945339/GREASE_PENCIL_BUG_BLENDER.blend)
Member

Changed status from 'Needs User Info' to: 'Confirmed'

Changed status from 'Needs User Info' to: 'Confirmed'
Member
* thread #26, name = 'blender', stop reason = signal SIGSEGV: invalid address (fault address: 0x0)
  * frame #0: 0x0000000002f8ea3b blender`psys_interpolate_face(mesh=0x00007fffce222808, mvert=0x00007fffce21c0a8, vert_normals=0x00007fffce221188, mface=0x0000000000000000, tface=0x0000000000000000, orcodata=0x00007fffce221148, w=0x00007fffd4b1bdc0, vec=0x00007fffd4b1bf1c, nor=0x0000000000000000, utan=0x0000000000000000, vtan=0x0000000000000000, orco=0x00007fffd3177268) at particle.c:1680:8
    frame #1: 0x0000000002f90117 blender`psys_particle_on_dm(mesh_final=0x00007fffce222808, from=1, index=0, index_dmcache=-1, fw=0x00007fffce229670, foffset=0, vec=0x00007fffd4b1bf1c, nor=0x0000000000000000, utan=0x0000000000000000, vtan=0x0000000000000000, orco=0x00007fffd3177268) at particle.c:2175:7
    frame #2: 0x0000000002f90886 blender`psys_particle_on_emitter(psmd=0x00007fffcc80e008, from=1, index=0, index_dmcache=-1, fuv=0x00007fffce229670, foffset=0, vec=0x00007fffd4b1bf1c, nor=0x0000000000000000, utan=0x0000000000000000, vtan=0x0000000000000000, orco=0x00007fffd3177268) at particle.c:2320:5
    frame #3: 0x0000000002f9b9b3 blender`psys_get_dupli_texture(psys=0x00007fffcc811008, part=0x00007fffd91e7808, psmd=0x00007fffcc80e008, pa=0x00007fffce2295d0, cpa=0x0000000000000000, uv=0x00007fffd3177274, orco=0x00007fffd3177268) at particle.c:5113:3
    frame #4: 0x0000000002f77f12 blender`make_duplis_particle_system(ctx=0x00007fffd4b1c390, psys=0x00007fffcc811008) at object_dupli.cc:1579:9
    frame #5: 0x0000000002f76bb9 blender`make_duplis_particles(ctx=0x00007fffd4b1c4e0) at object_dupli.cc:1605:7
    frame #6: 0x0000000002f74f24 blender`::object_duplilist(depsgraph=0x00007fffda4a7e08, sce=0x00007fffda4cf808, ob=0x00007fffeb0e3008) at object_dupli.cc:1688:5
    frame #7: 0x0000000003a23e66 blender`(anonymous namespace)::deg_iterator_objects_step(data=0x00007fffd4b1c780) at depsgraph_query_iter.cc:264:7
    frame #8: 0x0000000003a2389b blender`::DEG_iterator_objects_next(iter=0x00007fffd4b1c728) at depsgraph_query_iter.cc:317:9
    frame #9: 0x00000000052aec47 blender`lineart_main_load_geometries(depsgraph=0x00007fffda4a7e08, scene=0x00007fffda4cf808, camera=0x00007fffeb035408, rb=0x00007fffd302e008, allow_duplicates=true) at lineart_cpu.c:2198:3
    frame #10: 0x00000000052ad887 blender`MOD_lineart_compute_feature_lines(depsgraph=0x00007fffda4a7e08, lmd=0x00007fffcd013008, cached_result=0x00007fffda6190c8, enable_stroke_depth_offset=true) at lineart_cpu.c:4240:3
    frame #11: 0x0000000005299455 blender`generateStrokes(md=0x00007fffcd013008, depsgraph=0x00007fffda4a7e08, ob=0x00007fffeb035a08) at MOD_gpencillineart.c:147:5
    frame #12: 0x0000000002e2b081 blender`BKE_gpencil_modifiers_calc(depsgraph=0x00007fffda4a7e08, scene=0x00007fffda4cf808, ob=0x00007fffeb035a08) at gpencil_modifier.c:787:9
    frame #13: 0x0000000003a80742 blender`std::_Function_handler<void (Depsgraph*), blender::deg::DepsgraphNodeBuilder::build_object_data_geometry(Object*)::$_19>::_M_invoke(__functor=0x00007fffcb0fb1c8, __args=0x00007fffd4b1d260) at std_function.h:291:9
    frame #14: 0x0000000003a54f3e blender`std::function<void (Depsgraph*)>::operator(this=0x00007fffcb0fb1c8, __args=0x00007fffda4a7e08)(Depsgraph*) const at std_function.h:560:9
    frame #15: 0x0000000003a546b3 blender`blender::deg::(anonymous namespace)::evaluate_node(state=0x00007fffffffe560, operation_node=0x00007fffcb0fb108)::DepsgraphEvalState const*, blender::deg::OperationNode*) at deg_eval.cc:102:5
    frame #16: 0x0000000003a545ba blender`blender::deg::(anonymous namespace)::deg_task_run_func(pool=0x00007fffeb09dc08, taskdata=0x00007fffcb0fb108) at deg_eval.cc:113:3
    frame #17: 0x000000000e59988d blender`Task::operator(this=0x00007fffcc005248)() const at task_pool.cc:164:3
    frame #18: 0x000000000e59a7b9 blender`tbb::internal::function_task<Task>::execute(this=0x00007fffcc005240) at task.h:1059:13
    frame #19: 0x00000000036bded5 blender`tbb::internal::custom_scheduler<tbb::internal::IntelSchedulerTraits>::process_bypass_loop(tbb::internal::context_guard_helper<false>&, tbb::task*, long) + 533
    frame #20: 0x00000000036be18b blender`tbb::internal::custom_scheduler<tbb::internal::IntelSchedulerTraits>::local_wait_for_all(tbb::task&, tbb::task*) + 235
    frame #21: 0x00000000036aaee7 blender`tbb::internal::arena::process(tbb::internal::generic_scheduler&) + 391
    frame #22: 0x00000000036b7be0 blender`tbb::internal::market::process(rml::job&) + 32
    frame #23: 0x00000000036b9c0c blender`tbb::internal::rml::private_worker::run() + 76
    frame #24: 0x00000000036b9e09 blender`tbb::internal::rml::private_worker::thread_routine(void*) + 9
    frame #25: 0x00007ffff7e1c5c2 libc.so.6`start_thread + 722
    frame #26: 0x00007ffff7ea1584 libc.so.6`__clone + 68
``` * thread #26, name = 'blender', stop reason = signal SIGSEGV: invalid address (fault address: 0x0) * frame #0: 0x0000000002f8ea3b blender`psys_interpolate_face(mesh=0x00007fffce222808, mvert=0x00007fffce21c0a8, vert_normals=0x00007fffce221188, mface=0x0000000000000000, tface=0x0000000000000000, orcodata=0x00007fffce221148, w=0x00007fffd4b1bdc0, vec=0x00007fffd4b1bf1c, nor=0x0000000000000000, utan=0x0000000000000000, vtan=0x0000000000000000, orco=0x00007fffd3177268) at particle.c:1680:8 frame #1: 0x0000000002f90117 blender`psys_particle_on_dm(mesh_final=0x00007fffce222808, from=1, index=0, index_dmcache=-1, fw=0x00007fffce229670, foffset=0, vec=0x00007fffd4b1bf1c, nor=0x0000000000000000, utan=0x0000000000000000, vtan=0x0000000000000000, orco=0x00007fffd3177268) at particle.c:2175:7 frame #2: 0x0000000002f90886 blender`psys_particle_on_emitter(psmd=0x00007fffcc80e008, from=1, index=0, index_dmcache=-1, fuv=0x00007fffce229670, foffset=0, vec=0x00007fffd4b1bf1c, nor=0x0000000000000000, utan=0x0000000000000000, vtan=0x0000000000000000, orco=0x00007fffd3177268) at particle.c:2320:5 frame #3: 0x0000000002f9b9b3 blender`psys_get_dupli_texture(psys=0x00007fffcc811008, part=0x00007fffd91e7808, psmd=0x00007fffcc80e008, pa=0x00007fffce2295d0, cpa=0x0000000000000000, uv=0x00007fffd3177274, orco=0x00007fffd3177268) at particle.c:5113:3 frame #4: 0x0000000002f77f12 blender`make_duplis_particle_system(ctx=0x00007fffd4b1c390, psys=0x00007fffcc811008) at object_dupli.cc:1579:9 frame #5: 0x0000000002f76bb9 blender`make_duplis_particles(ctx=0x00007fffd4b1c4e0) at object_dupli.cc:1605:7 frame #6: 0x0000000002f74f24 blender`::object_duplilist(depsgraph=0x00007fffda4a7e08, sce=0x00007fffda4cf808, ob=0x00007fffeb0e3008) at object_dupli.cc:1688:5 frame #7: 0x0000000003a23e66 blender`(anonymous namespace)::deg_iterator_objects_step(data=0x00007fffd4b1c780) at depsgraph_query_iter.cc:264:7 frame #8: 0x0000000003a2389b blender`::DEG_iterator_objects_next(iter=0x00007fffd4b1c728) at depsgraph_query_iter.cc:317:9 frame #9: 0x00000000052aec47 blender`lineart_main_load_geometries(depsgraph=0x00007fffda4a7e08, scene=0x00007fffda4cf808, camera=0x00007fffeb035408, rb=0x00007fffd302e008, allow_duplicates=true) at lineart_cpu.c:2198:3 frame #10: 0x00000000052ad887 blender`MOD_lineart_compute_feature_lines(depsgraph=0x00007fffda4a7e08, lmd=0x00007fffcd013008, cached_result=0x00007fffda6190c8, enable_stroke_depth_offset=true) at lineart_cpu.c:4240:3 frame #11: 0x0000000005299455 blender`generateStrokes(md=0x00007fffcd013008, depsgraph=0x00007fffda4a7e08, ob=0x00007fffeb035a08) at MOD_gpencillineart.c:147:5 frame #12: 0x0000000002e2b081 blender`BKE_gpencil_modifiers_calc(depsgraph=0x00007fffda4a7e08, scene=0x00007fffda4cf808, ob=0x00007fffeb035a08) at gpencil_modifier.c:787:9 frame #13: 0x0000000003a80742 blender`std::_Function_handler<void (Depsgraph*), blender::deg::DepsgraphNodeBuilder::build_object_data_geometry(Object*)::$_19>::_M_invoke(__functor=0x00007fffcb0fb1c8, __args=0x00007fffd4b1d260) at std_function.h:291:9 frame #14: 0x0000000003a54f3e blender`std::function<void (Depsgraph*)>::operator(this=0x00007fffcb0fb1c8, __args=0x00007fffda4a7e08)(Depsgraph*) const at std_function.h:560:9 frame #15: 0x0000000003a546b3 blender`blender::deg::(anonymous namespace)::evaluate_node(state=0x00007fffffffe560, operation_node=0x00007fffcb0fb108)::DepsgraphEvalState const*, blender::deg::OperationNode*) at deg_eval.cc:102:5 frame #16: 0x0000000003a545ba blender`blender::deg::(anonymous namespace)::deg_task_run_func(pool=0x00007fffeb09dc08, taskdata=0x00007fffcb0fb108) at deg_eval.cc:113:3 frame #17: 0x000000000e59988d blender`Task::operator(this=0x00007fffcc005248)() const at task_pool.cc:164:3 frame #18: 0x000000000e59a7b9 blender`tbb::internal::function_task<Task>::execute(this=0x00007fffcc005240) at task.h:1059:13 frame #19: 0x00000000036bded5 blender`tbb::internal::custom_scheduler<tbb::internal::IntelSchedulerTraits>::process_bypass_loop(tbb::internal::context_guard_helper<false>&, tbb::task*, long) + 533 frame #20: 0x00000000036be18b blender`tbb::internal::custom_scheduler<tbb::internal::IntelSchedulerTraits>::local_wait_for_all(tbb::task&, tbb::task*) + 235 frame #21: 0x00000000036aaee7 blender`tbb::internal::arena::process(tbb::internal::generic_scheduler&) + 391 frame #22: 0x00000000036b7be0 blender`tbb::internal::market::process(rml::job&) + 32 frame #23: 0x00000000036b9c0c blender`tbb::internal::rml::private_worker::run() + 76 frame #24: 0x00000000036b9e09 blender`tbb::internal::rml::private_worker::thread_routine(void*) + 9 frame #25: 0x00007ffff7e1c5c2 libc.so.6`start_thread + 722 frame #26: 0x00007ffff7ea1584 libc.so.6`__clone + 68 ```
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123
Member

Looks like crash was introduced somewhere between 118803893e - 6ee14c966d

Unable to reproduce on lite build so I don't think I can bisect
@OmarEmaraDev hi, can you bisect?

Looks like crash was introduced somewhere between 118803893e - 6ee14c966d Unable to reproduce on lite build so I don't think I can bisect @OmarEmaraDev hi, can you bisect?
Pratik Borhade changed title from Blender crash when using a particle system + grease pencil line art modifier to Regression: Blender crash when using a particle system + grease pencil line art modifier 2022-03-25 17:06:53 +01:00
Member

@PratikPB2123 Will do.

@PratikPB2123 Will do.
Member

Added subscriber: @ChengduLittleA

Added subscriber: @ChengduLittleA
Member

I probably should take a look at this.

I probably should take a look at this.
Member

This only happens sometimes on my machine, where it looks like it's the particle mesh has this mesh.runtime==NULL problem. I'll take a look to see if I could call a ensure somewhere before loading for instanced objects.

This only happens _sometimes_ on my machine, where it looks like it's the particle mesh has this `mesh.runtime==NULL` problem. I'll take a look to see if I could call a `ensure somewhere` before loading for instanced objects.

Added subscriber: @dfelinto

Added subscriber: @dfelinto

@ChengduLittleA Can someone from lineart decide on whether this is a bug or a known issue? @OmarEmaraDev if the bisect got anywhere, please share away.

@ChengduLittleA Can someone from lineart decide on whether this is a bug or a known issue? @OmarEmaraDev if the bisect got anywhere, please share away.
Member

@ChengduLittleA Sorry about the delay, this slipped under my radar. This is caused by 1b07b7a068.

@ChengduLittleA Sorry about the delay, this slipped under my radar. This is caused by 1b07b7a068.
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Will raise prio since it is a (relatively recent) regression.

Will raise prio since it is a (relatively recent) regression.
YimingWu self-assigned this 2022-05-09 16:55:19 +02:00
Member

Let me take a look.

Let me take a look.
Member

Is this still reproducible under master? Because the object loading code is updated and I could not reproduce it any more.

Is this still reproducible under `master`? Because the object loading code is updated and I could not reproduce it any more.
Member

Yes. I still get crashes in master as of this moment.

Yes. I still get crashes in master as of this moment.

Added subscriber: @ZedDB

Added subscriber: @ZedDB

Seems like this might only be reproducible on Windows then?*
I can't reproduce this on Linux.

Seems like this might only be reproducible on Windows then?* I can't reproduce this on Linux.
Member

I am testing on Linux with a debug build.

I am testing on Linux with a debug build.
Member

Please test if D14903 fixed this problem. Thanks!

Please test if [D14903](https://archive.blender.org/developer/D14903) fixed this problem. Thanks!
Member

@ChengduLittleA I can still reproduce the crash with D14903.

@ChengduLittleA I can still reproduce the crash with [D14903](https://archive.blender.org/developer/D14903).

This issue was referenced by 870ad7d05d

This issue was referenced by 870ad7d05db2e14164d818cd5320345fd8110a69
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'

This issue was referenced by 369f652c80

This issue was referenced by 369f652c8046955ea83436a138d61a5b130c04c4
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
8 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#96781
No description provided.